# air_quality

./: .gitignore  README.md  bibliography.odt  nosql.md  pyproject.toml  report.md
air_quality_monitoring/: cropped.py  import.py  pollution.sql  quest_ingest.py
air_quality_monitoring/data/: Air_Quality_Continuous.csv  air_quality_cropped copy.csv  constituencies.csv  measures.csv  stations.csv
mysql_model/: pollution_data.mwb  pollution_data.mwb.bak
task_5_files/: query-a.sql  query-b.sql  query-c.sql
